# LittleToolBox

./: .gitignore  CMakeLists.txt  LTBLinux.sh  LTBWin.bat
Editor/: CMakeLists.txt
Editor/Resources/Saves/: card.data
Editor/include/Controls/: Camera.h  Camera2D.h  EnttInfo.h  IControl.h  Model.h  Script.h  Sprite.h  Transform.h
Editor/include/Editor/: EditorLayer.h  Events.h  Helpers.h  Inputs.h  Widget.h
Editor/include/Windows/: Hierarchy.h  Inspector.h  MenuBar.h  MenuList.h  Resource.h  Viewport.h
Editor/src/: Editor.cpp  EditorLayer.cpp
Engine/: CMakeLists.txt
Engine/Data/Fonts/: driusstraight.ttfZone.Identifier
Engine/Data/ImGui/: default.ini  default2.ini
Engine/include/: LittleToolBox.h  ltbpch.h
Engine/include/Auxiliaries/: Assets.h  Data.h  ECS.h  UUID.h  gui_window_file_dialog.h
Engine/include/Core/: Application.h  Assert.h  Config.h  EntryPoint.h  Event.h  Layer.h  LayerStack.h  Log.h  Window.h
Engine/include/ImGui/: ImGuiLayer.h
Engine/include/Math/: LTBMath.h
Engine/include/Renderer/: Framebuffer.h  Renderer.h
Engine/include/Scene/: Scene.h  SceneSerializer.h
Engine/include/Scripts/: Context.h  Helpers.h  Utilities.h
Engine/src/: Application.cpp  Framebuffer.cpp  ImGuiLayer.cpp  LTBMath.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Renderer.cpp  Scene.cpp  SceneSerializer.cpp  ScriptContext.cpp  UUID.cpp  ltbpch.cpp
Sandbox/: CMakeLists.txt
Sandbox/Resources/Saves/: test.data
Sandbox/include/: GameLayer.h
Sandbox/src/: main.cpp
Script/: GuyScript.lua  TestScript.lua  test2.lua
Script/Engine/: Core.lua  Input.lua
